--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -40,10 +40,18 @@ repositories {
     maven {
         url = 'https://www.matthewo.tech/maven/'
     }
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
 }
 
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+
     implementation 'org.team11260:fast-load:0.1.2'
+
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 }
